FA: fix subsampling (kindof)

--- a/muon-mofa-attempt.ipynb
+++ b/muon-mofa-attempt.ipynb
@@ -176,6 +176,47 @@
    "source": [
     "mu.tl.mofa(mudata, n_factors=3, convergence_mode='medium', outfile=\"models/muon_mofa.hdf5\", gpu_mode=True, use_obs=\"union\", use_float32=True, likelihoods=\"gaussian\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "4debd74e-dd85-483e-aa8f-f49624f61b7d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import h5py\n",
+    "f=h5py.File(\"models/muon_mofa.hdf5\", \"r\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "f6cfd0bf-12ec-41d6-8dcd-17d61ebda2bc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<KeysViewHDF5 ['data', 'expectations', 'features', 'features_metadata', 'groups', 'intercepts', 'model_options', 'samples', 'training_opts', 'training_stats', 'variance_explained', 'views']>\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<KeysViewHDF5 ['group1']>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(f.keys())\n",
+    "\n",
+    "f[\"data\"]"
+   ]
   }
  ],
  "metadata": {
