MOFA: gpu training, mofax model support

--- a/muon-mofa-attempt.ipynb
+++ b/muon-mofa-attempt.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "d7120083-c7f7-4fbc-a718-29ed1edefe09",
    "metadata": {},
    "outputs": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "45e0d5bd-c307-4b4d-9b9d-ef46a02dc580",
    "metadata": {},
    "outputs": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "8c95a25a-bc4d-43ca-9a2e-bb4f45d1ed1d",
    "metadata": {},
    "outputs": [],
@@ -216,6 +216,103 @@
     "print(f.keys())\n",
     "\n",
     "f[\"data\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "a65c7aa3-f3d1-47f6-a452-5daa2a301365",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import mofax\n",
+    "mfxm = mofax.mofa_model(\"models/muon_mofa.hdf5\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "5410e2bb-32a9-41fb-adea-f4d42f37350f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "data\n",
+      "data/protein\n",
+      "data/protein/group1\n",
+      "data/rna\n",
+      "data/rna/group1\n",
+      "expectations\n",
+      "expectations/W\n",
+      "expectations/W/protein\n",
+      "expectations/W/rna\n",
+      "expectations/Z\n",
+      "expectations/Z/group1\n",
+      "features\n",
+      "features/protein\n",
+      "features/rna\n",
+      "features_metadata\n",
+      "features_metadata/protein\n",
+      "features_metadata/protein/feature_types\n",
+      "features_metadata/protein/gene_ids\n",
+      "features_metadata/protein/genome\n",
+      "features_metadata/rna\n",
+      "features_metadata/rna/feature_types\n",
+      "features_metadata/rna/gene_ids\n",
+      "features_metadata/rna/genome\n",
+      "groups\n",
+      "groups/groups\n",
+      "intercepts\n",
+      "intercepts/protein\n",
+      "intercepts/protein/group1\n",
+      "intercepts/rna\n",
+      "intercepts/rna/group1\n",
+      "model_options\n",
+      "model_options/ard_factors\n",
+      "model_options/ard_weights\n",
+      "model_options/likelihoods\n",
+      "model_options/spikeslab_factors\n",
+      "model_options/spikeslab_weights\n",
+      "samples\n",
+      "samples/group1\n",
+      "training_opts\n",
+      "training_stats\n",
+      "training_stats/elbo\n",
+      "training_stats/number_factors\n",
+      "training_stats/time\n",
+      "variance_explained\n",
+      "variance_explained/r2_per_factor\n",
+      "variance_explained/r2_per_factor/group1\n",
+      "variance_explained/r2_total\n",
+      "variance_explained/r2_total/group1\n",
+      "views\n",
+      "views/views\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array(<KeysViewHDF5 ['ard_factors', 'ard_weights', 'likelihoods', 'spikeslab_factors', 'spikeslab_weights']>,\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#rna.var['feature_types'].index\n",
+    "\n",
+    "#mfxm.samples\n",
+    "\n",
+    "mfxm.model.visititems(lambda a, b: print(a))\n",
+    "\n",
+    "#np.array([*rna.var['feature_types'].index])\n",
+    "\n",
+    "np.array(mfxm.model['model_options'].keys())"
    ]
   }
  ],
