add the binary models

--- a/basic-MOFA-maybe.ipynb
+++ b/basic-MOFA-maybe.ipynb
@@ -218,21 +218,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "46e54a58-6c6b-4db7-9bc5-9cdf9b49ed16",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 22,
    "id": "6b384fdc-4864-44e3-bffd-c7ca858d52a5",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-06-01T07:46:53.288286Z",
      "start_time": "2024-06-01T07:40:36.738842Z"
-    }
+    },
+    "scrolled": true
    },
    "outputs": [
     {
@@ -566,25 +559,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 40,
    "id": "ee25ae3f-258d-4c34-b081-e22b7df0594b",
    "metadata": {},
    "outputs": [],
    "source": [
     "import mofax, h5py, os\n",
     "\n",
-    "os.remove('models/pyro-MOFA.h5')\n",
+    "try:\n",
+    "    os.remove('models/pyro-MOFA.h5')\n",
+    "except Exception:\n",
+    "    pass\n",
     "\n",
     "with h5py.File('models/pyro-MOFA.h5', 'w') as f:\n",
-    "    f['features/rna'] = np.array([*rna.var['feature_types'].index], dtype='S')\n",
-    "    f['features/protein'] = np.array([*protein.var['feature_types'].index], dtype='S')\n",
-    "    f['samples/group1'] = np.array([*pbmc.obs.index], dtype='S')\n",
-    "    f['data/rna/group1'] = rna.X.toarray()\n",
-    "    f['data/protein/group1'] = protein.X.toarray()\n",
-    "    f['expectations/Z/group1'] = map_estimates['Z'].detach().cpu().numpy()\n",
-    "    f['expectations/W/rna'] = map_estimates['W_rna'].detach().cpu().numpy()\n",
-    "    f['expectations/W/protein'] = map_estimates['W_protein'].detach().cpu().numpy()\n",
-    "    f['model_options/likelihoods'] = np.array(['gaussian', 'gaussian'], dtype='S')\n",
+    "    opt = dict(compression=\"gzip\", compression_opts=9)\n",
+    "    f.create_dataset('features/rna', data=np.array([*rna.var['feature_types'].index], dtype='S'), **opt)\n",
+    "    f.create_dataset('features/protein', data=np.array([*protein.var['feature_types'].index], dtype='S'), **opt)\n",
+    "    f.create_dataset('samples/group1', data=np.array([*pbmc.obs.index], dtype='S'), **opt)\n",
+    "    f.create_dataset('data/rna/group1', data=rna.X.toarray(), **opt)\n",
+    "    f.create_dataset('data/protein/group1', data=protein.X.toarray(), **opt)\n",
+    "    f.create_dataset('expectations/Z/group1', data=map_estimates['Z'].detach().cpu().numpy(), **opt)\n",
+    "    f.create_dataset('expectations/W/rna', data=map_estimates['W_rna'].detach().cpu().numpy(), **opt)\n",
+    "    f.create_dataset('expectations/W/protein', data=map_estimates['W_protein'].detach().cpu().numpy(), **opt)\n",
+    "    f.create_dataset('model_options/likelihoods', data=np.array(['gaussian', 'gaussian'], dtype='S'), **opt)\n",
     "\n",
     "\n",
     "mofax_model = mofax.mofa_model('models/pyro-MOFA.h5')"
