MOFA: (snad) opravené načítání do mofaxu

--- a/muon-mofa-attempt.ipynb
+++ b/muon-mofa-attempt.ipynb
@@ -231,6 +231,105 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "438b0e32-128a-4d30-9752-da4ab8e5c748",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Factor</th>\n",
+       "      <th>View</th>\n",
+       "      <th>Group</th>\n",
+       "      <th>R2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Factor1</td>\n",
+       "      <td>protein</td>\n",
+       "      <td>group1</td>\n",
+       "      <td>19.988710</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Factor1</td>\n",
+       "      <td>rna</td>\n",
+       "      <td>group1</td>\n",
+       "      <td>14.158750</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Factor2</td>\n",
+       "      <td>protein</td>\n",
+       "      <td>group1</td>\n",
+       "      <td>0.900775</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Factor2</td>\n",
+       "      <td>rna</td>\n",
+       "      <td>group1</td>\n",
+       "      <td>19.472730</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Factor3</td>\n",
+       "      <td>protein</td>\n",
+       "      <td>group1</td>\n",
+       "      <td>0.676912</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Factor3</td>\n",
+       "      <td>rna</td>\n",
+       "      <td>group1</td>\n",
+       "      <td>13.639957</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Factor     View   Group         R2\n",
+       "0  Factor1  protein  group1  19.988710\n",
+       "1  Factor1      rna  group1  14.158750\n",
+       "2  Factor2  protein  group1   0.900775\n",
+       "3  Factor2      rna  group1  19.472730\n",
+       "4  Factor3  protein  group1   0.676912\n",
+       "5  Factor3      rna  group1  13.639957"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mfxm.get_r2()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 48,
    "id": "5410e2bb-32a9-41fb-adea-f4d42f37350f",
    "metadata": {},
@@ -314,6 +413,14 @@
     "\n",
     "np.array(mfxm.model['model_options'].keys())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c205bcca-9b00-4c0c-ac30-c7234312821f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
