MOFA: drop all==0 RNA columns

--- a/muon-mofa-attempt.ipynb
+++ b/muon-mofa-attempt.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "d7120083-c7f7-4fbc-a718-29ed1edefe09",
    "metadata": {},
    "outputs": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "45e0d5bd-c307-4b4d-9b9d-ef46a02dc580",
    "metadata": {},
    "outputs": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "8c95a25a-bc4d-43ca-9a2e-bb4f45d1ed1d",
    "metadata": {},
    "outputs": [],
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "3a13e795-4afc-4266-bc37-b440774efe18",
    "metadata": {},
    "outputs": [],
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "0eb9acec-d53d-4f9c-9ffa-72c55d7e0461",
    "metadata": {},
    "outputs": [
@@ -174,12 +174,12 @@
     }
    ],
    "source": [
-    "mu.tl.mofa(mudata, n_factors=3, convergence_mode='medium', outfile=\"models/muon_mofa.hdf5\", gpu_mode=True, use_obs=\"union\", use_float32=True, likelihoods=\"gaussian\")"
+    "mu.tl.mofa(mudata, n_factors=5, convergence_mode='medium', outfile=\"models/muon_mofa.hdf5\", gpu_mode=True, use_obs=\"union\", use_float32=True, likelihoods=\"gaussian\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "4debd74e-dd85-483e-aa8f-f49624f61b7d",
    "metadata": {},
    "outputs": [],
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "f6cfd0bf-12ec-41d6-8dcd-17d61ebda2bc",
    "metadata": {},
    "outputs": [
@@ -204,10 +204,10 @@
     {
      "data": {
       "text/plain": [
-       "<KeysViewHDF5 ['group1']>"
+       "<HDF5 group \"/data\" (2 members)>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,42 +268,70 @@
        "      <td>Factor1</td>\n",
        "      <td>protein</td>\n",
        "      <td>group1</td>\n",
-       "      <td>19.988710</td>\n",
+       "      <td>25.758368</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Factor1</td>\n",
        "      <td>rna</td>\n",
        "      <td>group1</td>\n",
-       "      <td>14.158750</td>\n",
+       "      <td>10.216057</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Factor2</td>\n",
        "      <td>protein</td>\n",
        "      <td>group1</td>\n",
-       "      <td>0.900775</td>\n",
+       "      <td>2.365130</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Factor2</td>\n",
        "      <td>rna</td>\n",
        "      <td>group1</td>\n",
-       "      <td>19.472730</td>\n",
+       "      <td>16.262412</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Factor3</td>\n",
        "      <td>protein</td>\n",
        "      <td>group1</td>\n",
-       "      <td>0.676912</td>\n",
+       "      <td>-1.640821</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>Factor3</td>\n",
        "      <td>rna</td>\n",
        "      <td>group1</td>\n",
-       "      <td>13.639957</td>\n",
+       "      <td>19.965184</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Factor4</td>\n",
+       "      <td>protein</td>\n",
+       "      <td>group1</td>\n",
+       "      <td>1.256967</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Factor4</td>\n",
+       "      <td>rna</td>\n",
+       "      <td>group1</td>\n",
+       "      <td>1.750338</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Factor5</td>\n",
+       "      <td>protein</td>\n",
+       "      <td>group1</td>\n",
+       "      <td>0.628477</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Factor5</td>\n",
+       "      <td>rna</td>\n",
+       "      <td>group1</td>\n",
+       "      <td>0.721741</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -311,12 +339,16 @@
       ],
       "text/plain": [
        "    Factor     View   Group         R2\n",
-       "0  Factor1  protein  group1  19.988710\n",
-       "1  Factor1      rna  group1  14.158750\n",
-       "2  Factor2  protein  group1   0.900775\n",
-       "3  Factor2      rna  group1  19.472730\n",
-       "4  Factor3  protein  group1   0.676912\n",
-       "5  Factor3      rna  group1  13.639957"
+       "0  Factor1  protein  group1  25.758368\n",
+       "1  Factor1      rna  group1  10.216057\n",
+       "2  Factor2  protein  group1   2.365130\n",
+       "3  Factor2      rna  group1  16.262412\n",
+       "4  Factor3  protein  group1  -1.640821\n",
+       "5  Factor3      rna  group1  19.965184\n",
+       "6  Factor4  protein  group1   1.256967\n",
+       "7  Factor4      rna  group1   1.750338\n",
+       "8  Factor5  protein  group1   0.628477\n",
+       "9  Factor5      rna  group1   0.721741"
       ]
      },
      "execution_count": 2,
@@ -330,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 10,
    "id": "5410e2bb-32a9-41fb-adea-f4d42f37350f",
    "metadata": {},
    "outputs": [
@@ -397,7 +429,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
